@@ -9,6 +9,7 @@ import com.team26.freelance.user.dto.UserContractSummaryDTO;
 import com.team26.freelance.user.dto.UserProfileDTO;
 import com.team26.freelance.user.dto.UserProfileSkillDTO;
 import com.team26.freelance.user.dto.UserResponseDTO;
+import com.team26.freelance.user.config.CacheConfig;
 import com.team26.freelance.user.model.Role;
 import com.team26.freelance.user.model.Status;
 import com.team26.freelance.user.model.User;
@@ -22,6 +23,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -80,15 +82,21 @@ public class UserService {
         user.setPassword(encoder.encode(user.getPassword()));
         User savedUser = userRepository.save(user);
         recordUserEvent(savedUser, USER_CREATED, userDetails(savedUser));
+        userCacheEvictionService.evictUserMutationCaches(savedUser.getId());
         return UserResponseDTO.fromUser(savedUser);
     }
 
+    @Cacheable(cacheNames = CacheConfig.USER_DETAIL_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).user(#id)")
+    @Transactional(readOnly = true)
     public UserResponseDTO findById(Long id) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
         return UserResponseDTO.fromUser(user);
     }
 
+    @Cacheable(cacheNames = CacheConfig.S1_F8_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).userProfile(#id)")
     @Transactional(readOnly = true)
     public UserProfileDTO getUserProfile(Long id) {
         User user = userRepository.findById(id)
@@ -122,6 +130,8 @@ public class UserService {
                 .collect(Collectors.toList());
     }
 
+    @Cacheable(cacheNames = CacheConfig.S1_F1_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).userSearch(#name, #email, #role)")
     @Transactional(readOnly = true)
     public List<UserResponseDTO> searchUsers(String name, String email, String role) {
         String normalizedName = normalizeFilter(name);
@@ -147,6 +157,7 @@ public class UserService {
         existing.setPreferences(updated.getPreferences());
         User savedUser = userRepository.save(existing);
         recordUserEvent(savedUser, USER_UPDATED, userDetails(savedUser));
+        userCacheEvictionService.evictUserMutationCaches(savedUser.getId());
         return UserResponseDTO.fromUser(savedUser);
     }
 
@@ -165,7 +176,7 @@ public class UserService {
         details.put("oldRole", oldRole == null ? null : oldRole.name());
         details.put("newRole", newRole.name());
         recordUserEvent(savedUser, ROLE_CHANGED, details);
-        userCacheEvictionService.evictUserDetail(id);
+        userCacheEvictionService.evictUserMutationCaches(id);
 
         return UserResponseDTO.fromUser(savedUser);
     }
@@ -176,6 +187,7 @@ public class UserService {
         Map<String, Object> details = userDetails(user);
         userRepository.delete(user);
         recordUserEvent(id, USER_DELETED, details);
+        userCacheEvictionService.evictUserMutationCaches(id);
     }
 
     @Transactional
@@ -190,9 +202,12 @@ public class UserService {
         userRepository.withdrawSubmittedProposals(id);
         User savedUser = userRepository.save(user);
         recordUserEvent(savedUser, USER_DEACTIVATED, userDetails(savedUser));
+        userCacheEvictionService.evictUserMutationCaches(savedUser.getId());
         return UserResponseDTO.fromUser(savedUser);
     }
 
+    @Cacheable(cacheNames = CacheConfig.S1_F5_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).preferenceSearch(#key, #value)")
     @Transactional(readOnly = true)
     public List<UserResponseDTO> filterByPreference(String key, String value) {
         if (key == null || key.isBlank() || value == null || value.isBlank()) {
@@ -202,8 +217,12 @@ public class UserService {
         String prefJson = String.format("{\"%s\": \"%s\"}", key, value);
         return userRepository.findByPreference(prefJson).stream()
                 .map(UserResponseDTO::fromUser)
-                .toList();
+                .collect(Collectors.toList());
     }
+
+    @Cacheable(cacheNames = CacheConfig.S1_F6_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).topFreelancers(#startDate, #endDate, #limit)")
+    @Transactional(readOnly = true)
     public List<TopFreelancerDTO> getTopFreelancers(LocalDate startDate, LocalDate endDate, int limit) {
         if (startDate.isAfter(endDate)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
@@ -221,6 +240,8 @@ public class UserService {
                 .collect(Collectors.toList());
     }
 
+    @Cacheable(cacheNames = CacheConfig.S1_F9_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).languagePreference(#lang, #minContracts)")
     @Transactional(readOnly = true)
     public List<UserResponseDTO> findByLanguageWithMinCompletedContracts(String lang, int minContracts) {
         if (lang == null || lang.isBlank()) {
@@ -235,6 +256,8 @@ public class UserService {
                 .collect(Collectors.toList());
     }
 
+    @Cacheable(cacheNames = CacheConfig.S1_F3_CACHE,
+            key = "T(com.team26.freelance.user.service.UserCacheKeys).contractSummary(#userId)")
     @Transactional(readOnly = true)
     public UserContractSummaryDTO getUserContractSummary(Long userId) {
         userRepository.findById(userId)
@@ -268,6 +291,7 @@ public class UserService {
         details.put("updatedKeys", incomingPreferences.keySet());
         details.put("preferences", savedUser.getPreferences());
         recordUserEvent(savedUser, PREFERENCES_UPDATED, details);
+        userCacheEvictionService.evictUserMutationCaches(savedUser.getId());
         return UserResponseDTO.fromUser(savedUser);
     }
 
@@ -294,8 +318,8 @@ public class UserService {
         details.put("skillName", targetSkill.getSkillName());
         details.put("category", targetSkill.getCategory());
         recordUserEvent(savedUser, PRIMARY_SKILL_SET, details);
+        userCacheEvictionService.evictUserMutationCaches(savedUser.getId());
         return UserResponseDTO.fromUser(savedUser);
-        //done 
     }
 
     private String normalizeFilter(String value) {
